<resources>
    <string name="app_name">helloworld</string>
    <string name="button1_text" translatable="false">button1</string>
    <string name="button2_text" translatable="false">button2</string>
    <string name="button3_text" translatable="false">button3</string>
    <string name="frame_button1">Button1</string>
    <string name="frame_button2">Button2</string>
    <string name="frame_button3">Button3</string>
    <string name="frame_button4">Button4</string>
    <string name="frame_button5">Button5</string>
    <string name="frame_button6">Button6</string>
    <string name="frame_button7">Button7</string>
    <string name="frame_button8">Button8</string>
    <string name="frame_button9">Button9</string>
    <string name="frame_button10">Button10</string>
    <string name="signup">Signup</string>
</resources>