<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayout">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="backToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button1"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button2"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button3"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button4"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button5"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button6"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button7"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button8"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button9"
                android:textAllCaps="false" />

            <Button
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:background="@color/grey"
                android:text="@string/frame_button10"
                android:textAllCaps="false" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>